--- a/web/public/index.html
+++ b/web/public/index.html
@@ -61,7 +61,7 @@
       </div>
       <div id="pagina-principal" class="center row" role="main">
       <div id="row-aventuras" class="center row">
-         <div class="col s8 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
+         <div class="col s12 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
             <h1 class = "titulo-aventura"> Aventuras </h1>
             <div id="libros-aventura" class="centre row">
                <div class="col s12 m12 l12 xl12" >
@@ -107,7 +107,7 @@
          </div>
       </div>
       <div id="row-aventuras" class="center row">
-         <div class="col s8 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
+         <div class="col s12 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
             <h1 class = "titulo-aventura"> Policiaca </h1>
             <div id="libros-policiaca" class="centre row">
                <div class="col s12 m12 l12 xl12" >
@@ -126,9 +126,9 @@
                </div>
             </div>
          </div>
-         <div class="col s3 m3 l3 xl3">
+         <div class="col s12 m3 l3 xl3">
             <h3> Calendario </h3>
-            <iframe area-label="link hacia google calendar" src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Atlantic%2FCanary&amp;src=cmVhZGNsdWJ1bGxAZ21haWwuY29t&amp;src=aG9uYWU0OXM4dDh1ZWs5NGp2M20zNDI0bmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%23C0CA33" style="border-width:0" width="300" height="300" frameborder="0" scrolling="no"></iframe>
+            <iframe id="miiframe" area-label="link hacia google calendar" src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Atlantic%2FCanary&amp;src=cmVhZGNsdWJ1bGxAZ21haWwuY29t&amp;src=aG9uYWU0OXM4dDh1ZWs5NGp2M20zNDI0bmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%23C0CA33" style="border-width:0" width="300" height="300" frameborder="0" scrolling="no"></iframe>
          </div>
       </div>
       <div id="row-novedades" class="center row">
@@ -136,7 +136,7 @@
             <h1 class = "titulo-novedades"> Novedades </h1>
             <div id="libros-novedades" class="centre row">
                <div class="col s12 m12 l12 xl12">
-                  <div class="col s3 m3 l3 xl3">
+                  <div class="col s12 m3 l3 xl3">
                      <div id="libro-nov" class="card">
                         <div class="card-image">
                            <img src="img/sofia.jpg" alt="Sofia" role="img"></img>
@@ -151,7 +151,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s3 m3 l3 xl3">
+                  <div class="col s12 m3 l3 xl3">
                      <div class="card">
                         <div class="card-image">
                            <img id="id-circe" src="img/circe.jpg" alt="circe" role="img"></img>
@@ -167,7 +167,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s3 m3 l3 xl3">
+                  <div class="col s12 m3 l3 xl3">
                      <div class="card">
                         <div class="card-image">
                            <img id="id-proposito" src="img/proposito.jpg" alt="Proposito" role="img"></img>
@@ -183,13 +183,13 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s3 m3 l3 xl3">
+                  <div class="col s12 m3 l3 xl3">
                      <div class="card">
                         <div class="card-image">
                            <img id="id-frontera" src="img/frontera.jpg" alt="Frontera" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p> aria-labelledby="sinopsis"La guerra ha llegado a casa.
+                           <p aria-labelledby="sinopsis">La guerra ha llegado a casa.
                               Hace cuarenta años que Art Keller está en primera línea de fuego del conflicto más largo de la historia de EE.UU.: la guerra contra la droga. 
                               Su obsesión por derrotar al capo más poderoso, rico y letal del mundo el líder del cártel de Sinaloa, Adán Barrera 
                               le ha costado cicatrices físicas y mentales, tener que despedir a personas a las que amaba e incluso se ha llevado parte de su alma.
@@ -228,7 +228,7 @@
                      Somos una biblioteca digital donde podrás encontar una amplia variedad de libros, comentarlos con el resto de usuarios, apuntar eventos...
                   </p>
                </div>
-               <div class="col l4 offset-l1 s12">
+               <div class="col m4 xl4 l4 offset-l1 s12">
                   <h5 class="white-text">Ubicación</h5>
                   <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
                   <p><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
