--- a/web/public/index.html
+++ b/web/public/index.html
@@ -29,9 +29,11 @@
       </script>
    </head>
    <body>
-      <nav role="navigation" aria-label="Top Menu Bar">
+      <nav role="custom-dropdown" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
+            <input type="checkbox" id="button-dropdown">
+            <label for="button-dropdown" onclick></label>
             <ul class="right hide-on-med-and-down" id="barra">
                <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" >Ver Ultimas Novedades</a></li>
                <li><a href="recomendacion.html" role="menuitem" tabindex="0" aria-expanded="false" >Recomendacion de libros</a></li>
@@ -65,16 +67,16 @@
             <h1 class = "titulo-aventura"> Aventuras </h1>
             <div id="libros-aventura" class="centre row">
                <ul id="libros" class="tabs tab-demo z-depth-1" role="list">
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/codigodavinci.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/codigodavinci.jpg" alt="Codigo da Vinci" role="img"></a><span>Codigo Da Vinci</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/desierto.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/desierto.jpg" alt="A traves del desierto" role="img"></a><span>A traves del Desierto</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/lobodelmar.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/lobodelmar.jpg" alt="El Lobo del mar" role="img"></a><span>El lobo del mar</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/quijote.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/quijote.jpg" alt="Don Quijote de la Mancha" role="img"></a><span>Don Quijote de la Mancha</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/isla_tesoro.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/prisionerozenda.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/ronin.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/caton.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/montecristo.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
-                  <li id="elemento-libro" class="tab"><a href="pagweblibro/gulliver.html" role="listitem" tabindex="0" aria-expanded="false"><img src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/codigodavinci.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/codigodavinci.jpg" alt="Codigo da Vinci" role="img"></a><span>Codigo Da Vinci</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/desierto.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/desierto.jpg" alt="A traves del desierto" role="img"></a><span>A traves del Desierto</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/lobodelmar.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/lobodelmar.jpg" alt="El Lobo del mar" role="img"></a><span>El lobo del mar</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/quijote.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/quijote.jpg" alt="Don Quijote de la Mancha" role="img"></a><span>Don Quijote de la Mancha</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/isla_tesoro.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/isla_tesoro.jpg" alt="La Isla del Tesoro" role="img"></a><span>La isla del tesoro</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/prisionerozenda.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/prisionerozenda.jpg" alt="El Prisionero de Zenda" role="img"></a><span>El prisionero de Zenda</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/ronin.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/ronin.jpg" alt="Ronin" role="img"></a><span>Ronin Las Leyendas</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/caton.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/caton.jpg" alt="El Regreso del Caton" role="img"></a><span>El regreso del Caton</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/montecristo.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/montecristo.jpeg" alt="El Conde de Montecristo" role="img"></a><span>El conde de Montecristo</span></li>
+                  <li id="elemento-libro" class="tab"><a href="pagweblibro/gulliver.html" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/gulliver.jpeg" alt="Los viajes de Gulliver" role="img"></a><span>Los viajes de Gulliver</span></li>
                </ul>
             </div>
          </div>
@@ -104,24 +106,22 @@
             </ul>
          </div>
       </div>
-      <div id="row-aventuras" class="center row">
+      <div id="row-policiaca" class="center row">
          <div class="col s12 offset-s1 m8 offset-m1 l8 offset-l1 xl8 offset-xl1">
-            <h1 class = "titulo-aventura"> Policiaca </h1>
+            <h1 class = "titulo-policiaca"> Policiaca </h1>
             <div id="libros-policiaca" class="centre row">
-               <div class="col s12 m12 l12 xl12" >
                   <ul id="libros" class="tabs tab-demo z-depth-1" role="list">
-                     <li id="elemento-libro" class="tab"><a href="#ejem1" role="listitem" tabindex="0" aria-expanded="false"><img src="img/zorro.jpeg" alt="Zorro" role="img"></a><span>Zorro</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem2" role="listitem" tabindex="0" aria-expanded="false"><img src="img/espinas.jpeg" alt="El lenguaje de espinas" role="img"></a><span>El lenguaje de espinas</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem3" role="listitem" tabindex="0" aria-expanded="false"><img src="img/visitante.jpeg" alt="Visitante" role="img"></a><span>Visitante</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem4" role="listitem" tabindex="0" aria-expanded="false"><img src="img/border.jpeg" alt="The Border"role="img"></a><span>The Border</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem5" role="listitem" tabindex="0" aria-expanded="false"><img src="img/falco.jpeg" alt="Falco" role="img"></a><span>Falco</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem6" role="listitem" tabindex="0" aria-expanded="false"><img src="img/pitagora.jpg" alt="El Asesinato de Pitagoras" role="img"></a><span>El asesinato de Pitagoras</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/sakura.jpg" alt="Sakura" role="img"></a><span>Sakura</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/hielo.jpg" alt="Te vere bajo el hielo" role="img"></a><span>Te vere bajo el hielo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/petirrojo.jpg" alt="Pelirrojo" role="img"></a><span>Petirrojo</span></li>
-                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img src="img/paciente.jpeg" alt="El Paciente" role="img"></a><span>El paciente</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem1" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/zorro.jpeg" alt="Zorro" role="img"></a><span>Zorro</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem2" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/espinas.jpeg" alt="El lenguaje de espinas" role="img"></a><span>El lenguaje de espinas</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem3" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/visitante.jpeg" alt="Visitante" role="img"></a><span>Visitante</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem4" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/border.jpeg" alt="The Border"role="img"></a><span>The Border</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem5" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/falco.jpeg" alt="Falco" role="img"></a><span>Falco</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem6" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/pitagora.jpg" alt="El Asesinato de Pitagoras" role="img"></a><span>El asesinato de Pitagoras</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/sakura.jpg" alt="Sakura" role="img"></a><span>Sakura</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/hielo.jpg" alt="Te vere bajo el hielo" role="img"></a><span>Te vere bajo el hielo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/petirrojo.jpg" alt="Pelirrojo" role="img"></a><span>Petirrojo</span></li>
+                     <li id="elemento-libro" class="tab"><a href="#ejem7" role="listitem" tabindex="0" aria-expanded="false"><img class="responsive-img" src="img/paciente.jpeg" alt="El Paciente" role="img"></a><span>El paciente</span></li>
                   </ul>
-               </div>
             </div>
          </div>
          <div class="col s12 m3 l3 xl3">
@@ -140,7 +140,7 @@
                            <img src="img/sofia.jpg" alt="Sofia" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p aria-labelledby="sinopsis">La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera, 
+                           <p id="sinopsis" aria-labelledby="sinopsis">La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera, 
                               no es su verdadera madre y que si quiere conocer la verdad de su origen debe ir a París esa misma noche.
                            </p>
                         </div>
@@ -155,7 +155,7 @@
                            <img id="id-circe" src="img/circe.jpg" alt="circe" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p aria-labelledby="sinopsis">En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y 
+                           <p id="sinopsis" aria-labelledby="sinopsis">En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y 
                               de la agresiva capacidad de seducción de su madre. Cuando acude al mundo de los mortales en busca de compañía, descubre que sí posee un poder,
                               el poder de la brujería, con el que puede transformar a sus rivales en monstruos y amenazar a los mismísimos dioses.
                            </p>
@@ -171,7 +171,7 @@
                            <img id="id-proposito" src="img/proposito.jpg" alt="Proposito" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p aria-labelledby="sinopsis">Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal 
+                           <p id="sinopsis" aria-labelledby="sinopsis">Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal 
                               y sensible sobre su visión del amor y de su forma de experimentarlo y vivirlo. 
                               En el libro conviven dos mundos muy extremos, uno muy blanco y otro más oscuro, que pertenecen a lo más íntimo del autor.
                            </p>
@@ -187,7 +187,7 @@
                            <img id="id-frontera" src="img/frontera.jpg" alt="Frontera" role="img"></img>
                         </div>
                         <div class="card-content">
-                           <p aria-labelledby="sinopsis">La guerra ha llegado a casa.
+                           <p id="sinopsis" aria-labelledby="sinopsis">La guerra ha llegado a casa.
                               Hace cuarenta años que Art Keller está en primera línea de fuego del conflicto más largo de la historia de EE.UU.: la guerra contra la droga. 
                               Su obsesión por derrotar al capo más poderoso, rico y letal del mundo el líder del cártel de Sinaloa, Adán Barrera 
                               le ha costado cicatrices físicas y mentales, tener que despedir a personas a las que amaba e incluso se ha llevado parte de su alma.
@@ -222,14 +222,14 @@
             <div class="center row">
                <div class="col l4 s12">
                   <h5 class="white-text">Quienes somos</h5>
-                  <p class="grey-text text-lighten-4">
+                  <p id="descripcion" class="grey-text text-lighten-4">
                      Somos una biblioteca digital donde podrás encontar una amplia variedad de libros, comentarlos con el resto de usuarios, apuntar eventos...
                   </p>
                </div>
                <div class="col m4 xl4 l4 offset-l1 s12">
                   <h5 class="white-text">Ubicación</h5>
                   <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
-                  <p><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
+                  <p id="direccion"><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
                </div>
                <div class="col l2 offset-l1 s12">
                   <h5 class="white-text">Contactanos</h5>
