--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,7 +10,15 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <link rel="stylesheet" type="text/css" href="style/style.css"/>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+      <!-- Global site tag (gtag.js) - Google Analytics --> 
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131489316-3"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
 
+         gtag('config', 'UA-131489316-3');
+      </script>
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
