--- a/web/public/index.html
+++ b/web/public/index.html
@@ -57,7 +57,7 @@
                <li><a href="añadirlibros.html" role="menuitem" tabindex="0" aria-expanded="false" >Añadir Libros</a></li>
                <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" >Log In</a></li>
                <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" >Sign Up</a></li>
-               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" >Log Out</a></li>
+               <li><a href="#!" id="logout" role="menuitem" tabindex="0" aria-expanded="false" >Log Out</a></li>
                <li>
                   <div class="center row">
                      <div class="col s12 ">
