--- a/web/public/pagweblibro/caton.html
+++ b/web/public/pagweblibro/caton.html
@@ -59,10 +59,10 @@
          </div>
       </div>
       <div class="row">
-          <div class="col s6">
-              <img src="../img/caton.jpeg" alt="Libro El Último Catón" height="500" width="500">
+          <div class="col s6 m6 l6 xl6 ">
+              <img src="../img/caton.jpg" alt="Libro El Último Catón" height="75%" width="100%">
           </div>
-          <div class="col s6">
+          <div class="col s4 offset-s2 m6 l6 xl6">
              <div class="text-libro">
                <p><b>Autor:</b> Matilde Asensi</p>
                <p><b>Año:</b>2001</p>
@@ -82,7 +82,7 @@
       <div class="row">
             <div class="col s12 m12 l12 xl12">
             <p>
-                    Bajo el suelo de la Ciudad del Vaticvcano, en su despacho del Archivo Secreto, la hermana Ottavia Salina, paleógrada, recibe el encargo de descifrar los extraños tatuajes aparecidos en el cadáver de un etíope: siete letras griegas y diete cruces.
+               Bajo el suelo de la Ciudad del Vaticvcano, en su despacho del Archivo Secreto, la hermana Ottavia Salina, paleógrada, recibe el encargo de descifrar los extraños tatuajes aparecidos en el cadáver de un etíope: siete letras griegas y diete cruces.
             </p>
             </div>
          </div>
