--- a/web/public/index.html
+++ b/web/public/index.html
@@ -52,11 +52,12 @@
             <input type="checkbox" id="button-dropdown">
             <label for="button-dropdown" onclick></label>
             <ul class="right hide-on-med-and-down" id="barra">
+               <li><a href="catalogo.html" role="menuitem" tabindex="0" aria-expanded="false">Catálogo</a></li>
                <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" >Ver Ultimas Novedades</a></li>
                <li><a href="recomendacion.html" role="menuitem" tabindex="0" aria-expanded="false" >Recomendacion de libros</a></li>
                <li><a href="añadirlibros.html" role="menuitem" tabindex="0" aria-expanded="false" >Añadir Libros</a></li>
-               <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" >Log In</a></li>
-               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" >Sign Up</a></li>
+               <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" >Sign Up</a></li>
+               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" >Log In</a></li>
                <li><a href="#!" id="logout" role="menuitem" tabindex="0" aria-expanded="false" >Log Out</a></li>
                <li>
                   <div class="center row">
