--- a/web/public/index.html
+++ b/web/public/index.html
@@ -262,6 +262,18 @@
                      </li>
                   </ul>
                </div>
+               <div class="col l2 offset-l1 s12">
+                  <h5 class="white-text">Mapa web</h5>
+                  <p id="descripcion" class="grey-text text-lighten-4">
+                    <ul>
+                      <li><a href="index.html">Inicio</a></li>
+                      <li><a href="añadirlibros.html">Añadir libros</a></li>
+                      <li><a href="catalogo.html">Catálogo</a></li>
+                      <li><a href="login.html">Login</a></li>
+                      <li><a href="signup.html">Signup</a></li>
+                    </ul>
+                  </p>
+               </div>
             </div>
          </div>
          <div class="footer-copyright">
