--- a/web/public/catalogo.html
+++ b/web/public/catalogo.html
@@ -45,6 +45,17 @@
 
       gtag('config', 'UA-131489316-3', { 'optimize_id': 'GTM-PKTQHB3'});
       </script>
+
+      <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous">
+      </script>
+      <script>
+        $(function(){
+          $("#footer").load("footer.html");
+        });
+      </script>
    </head>
    <body>
       <nav role="custom-dropdown" aria-label="Top Menu Bar">
@@ -122,7 +133,7 @@
                 <br/>
                 <p>Hace cuarenta años que Art Keller está en primera línea de fuego del conflicto más largo de la historia de EE.UU.: la guerra contra la droga. Su obsesión por derrotar al capo más poderoso, rico y letal del mundo —el líder del cártel de Sinaloa, Adán Barrera— le ha costado cicatrices físicas y mentales, tener que despedir a personas a las que amaba e incluso se ha llevado parte de su alma.
                     Ahora Keller se encuentra al mando de la DEA viendo cómo al destruir al monstruo han surgido otros treinta que están llevando incluso más caos y destrucción a su amado México. Pero eso no es todo.</p>
-                <p><a href="https://www.amazon.es/frontera-Suspense-Thriller-Don-Winslow-ebook/dp/B07L9CTMZV" style="font-size:20px;">Amazon</a></p>    
+                <p><a href="https://www.amazon.es/frontera-Suspense-Thriller-Don-Winslow-ebook/dp/B07L9CTMZV" style="font-size:20px;">Amazon</a></p>
                 </div>
                 </div>
                 </div>
@@ -139,7 +150,7 @@
                 <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4" style="text-align:left;">The Border<i class="material-icons right">close</i></span>
                 <br/>
-                <p>This shattering tale of violence, corruption and justice, is this last novel in Don Winslow's award-winning, internationally bestselling Cartel trilogy. Shocking in its brutality, raw in its humanity, The Border is an unflinching portrait of modern America, a story of-and for-our time. What do you do when there are no borders? When the lines you thought existed simply vanish? How do you plant your feet to make a stand when you no longer know what side you're on? The war has come home. For over forty years, Art Keller has been on the front lines of America's longest conflict: The War On Drugs. 
+                <p>This shattering tale of violence, corruption and justice, is this last novel in Don Winslow's award-winning, internationally bestselling Cartel trilogy. Shocking in its brutality, raw in its humanity, The Border is an unflinching portrait of modern America, a story of-and for-our time. What do you do when there are no borders? When the lines you thought existed simply vanish? How do you plant your feet to make a stand when you no longer know what side you're on? The war has come home. For over forty years, Art Keller has been on the front lines of America's longest conflict: The War On Drugs.
                 </p>
                 <p><a href="https://amzn.to/2wkkABE" style="font-size:20px;">Amazon</a></p>
                 </div>
@@ -181,7 +192,7 @@
                 <br/>
                 <p>En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y de la agresiva capacidad de seducción de su madre. Cuando acude al mundo de los mortales en busca de
                     compañía, descubre que sí posee un poder, el poder de la brujería, con el que puede transformar a sus rivales en monstruos y amenazar a los mismísimos dioses.</p>
-                <p><a href="https://amzn.to/2W4K45j" style="font-size:20px;">Amazon</a></p>    
+                <p><a href="https://amzn.to/2W4K45j" style="font-size:20px;">Amazon</a></p>
                 </div>
                 </div>
                 </div>
@@ -198,7 +209,7 @@
                 <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4" style="text-align:left;">Codigo Da Vinci<i class="material-icons right">close</i></span>
                 <br/>
-                <p>Robert Langdon recibe una llamada en mitad de la noche: el conservador del museo del Louvre ha sido asesinado en extrañas circunstancias y junto a su cadáver ha aparecido un desconcertante mensaje cifrado. Al profundizar en la investigación, Langdon, experto en simbología, descubre que las pistas conducen a las obras de Leonardo Da Vinci… y que están a la vista de todos, ocultas por el ingenio del pintor.  
+                <p>Robert Langdon recibe una llamada en mitad de la noche: el conservador del museo del Louvre ha sido asesinado en extrañas circunstancias y junto a su cadáver ha aparecido un desconcertante mensaje cifrado. Al profundizar en la investigación, Langdon, experto en simbología, descubre que las pistas conducen a las obras de Leonardo Da Vinci… y que están a la vista de todos, ocultas por el ingenio del pintor.
                 </p>
                 <p><a href="https://amzn.to/2Qo5d4A" style="font-size:20px;">Amazon</a></p>
                 </div>
@@ -238,7 +249,7 @@
                 <span class="card-title grey-text text-darken-4" style="text-align:left;font-size:21px;">Lenguaje De Espinas<i class="material-icons right">close</i></span>
                 <br/>
                 <p>Viaja a un mundo de oscuras joyas bañadas por la luz de la luna, de pueblos encantados y bosques hambrientos, de bestias parlantes y golems de pan de jengibre; un lugar donde las voces de unas jóvenes sirenas pueden provocar amenazantes tormentas y donde un río podría hacerle una suculenta oferta a un chico enamorado a cambio de un terrible precio</p>
-                <p><a href="https://amzn.to/2K72yuL" style="font-size:20px;">Amazon</a></p>    
+                <p><a href="https://amzn.to/2K72yuL" style="font-size:20px;">Amazon</a></p>
                 </div>
                 </div>
                 </div>
@@ -255,7 +266,7 @@
                 <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4" style="text-align:left;">Falcó<i class="material-icons right">close</i></span>
                 <br/>
-                <p>La Europa turbulenta de los años treinta y cuarenta del siglo XX es el escenario de las andanzas de Lorenzo Falcó, ex contrabandista de armas, espía sin escrúpulos, agente de los servicios de inteligencia. Durante el otoño de 1936, mientras la frontera entre amigos y enemigos se reduce a una línea imprecisa y peligrosa, Falcó recibe el encargo de infiltrarse en una difícil misión que podría cambiar el curso de la historia de España.  
+                <p>La Europa turbulenta de los años treinta y cuarenta del siglo XX es el escenario de las andanzas de Lorenzo Falcó, ex contrabandista de armas, espía sin escrúpulos, agente de los servicios de inteligencia. Durante el otoño de 1936, mientras la frontera entre amigos y enemigos se reduce a una línea imprecisa y peligrosa, Falcó recibe el encargo de infiltrarse en una difícil misión que podría cambiar el curso de la historia de España.
                 </p>
                 <p><a href="https://amzn.to/2MbHvtN" style="font-size:20px;">Amazon</a></p>
                 </div>
@@ -281,7 +292,7 @@
                 </div>
                 </div>
                 </li>
-                
+
                 <li>
                 <div class="col s8 offset-s2 m2 offset-m2 l2 offset-l2 xl2 offset-xl2">
                 <div class="card">
@@ -296,7 +307,7 @@
                 <br/>
                 <p>Un joven descubre el cadáver de una chica debajo de una gruesa capa de hielo en un parque del sur de Londres.
                 La inspectora jefe Erika Foster será la encargada de dirigir la investigación del caso, mientras lucha contra sus propios demonios personales. Cuando Erika comienza a indagar en el pasado de la víctima, todo parece apuntar a que su asesinato está conectado con el homicidio de otras tres mujeres que han sido encontradas también bajo las aguas heladas de otros lagos en Londres.</p>
-                <p><a href="https://amzn.to/2JI7neD" style="font-size:20px;">Amazon</a></p>    
+                <p><a href="https://amzn.to/2JI7neD" style="font-size:20px;">Amazon</a></p>
                 </div>
                 </div>
                 </div>
@@ -351,8 +362,8 @@
                 <span class="card-title grey-text text-darken-4" style="text-align:left;font-size:17px;">El conde de Montecristo<i class="material-icons right">close</i></span>
                 <br/>
                 <p>Edmundo Dantés, un joven marinero, honrado y cándido, que lleva una existencia tranquila, solo desea casarse con la hermosa Mercedes. Pero su vida se verá arruinada cuando su mejor amigo, Fernando, deseoso de conquistar a su prometida, le traicione vilmente. Condenado a cumplir una condena injusta en la siniestra prisión del castillo de If, Edmundo vivirá una larga pesadilla de trece años. Obsesionado por su inesperado destino, dejará de lado sus convicciones para urdir la venganza perfecta.</p>
-                <p><a href="https://amzn.to/2MafrXE" style="font-size:20px;">Amazon</a></p>   
-                <p><a href="https://www.gutenberg.org/ebooks/1184" style="font-size:20px;">Leer Libro!</a></p>   
+                <p><a href="https://amzn.to/2MafrXE" style="font-size:20px;">Amazon</a></p>
+                <p><a href="https://www.gutenberg.org/ebooks/1184" style="font-size:20px;">Leer Libro!</a></p>
                 </div>
                 </div>
                 </div>
@@ -407,7 +418,7 @@
                 <span class="card-title grey-text text-darken-4" style="text-align:left;font-size:17px;">El Asesinato de Pitagoras<i class="material-icons right">close</i></span>
                 <br/>
                 <p>El anciano filósofo Pitágoras, uno de los personajes con más poder de su época, está a punto de elegir un sucesor entre los grandes maestros cuando en su comunidad se inicia una serie de asesinatos. Tras los crímenes se atisba una mente oscura y poderosa que parece superar al mismísimo Pitágoras. La enigmática Ariadna y el investigador egipcio Akenón tratarán de descubrir quién es el asesino a la vez que resuelven sus propios sentimientos.</p>
-                <p><a href="https://amzn.to/2HSHaXC" style="font-size:20px;">Amazon</a></p>   
+                <p><a href="https://amzn.to/2HSHaXC" style="font-size:20px;">Amazon</a></p>
                 </div>
                 </div>
                 </div>
@@ -451,41 +462,7 @@
 
     </ul>
     </div>
-      <footer class="page-footer">
-         <div class="container">
-            <div class="center row">
-               <div class="col l4 s12">
-                  <h5 class="white-text">Quienes somos</h5>
-                  <p id="descripcion" class="grey-text text-lighten-4">
-                     Somos una biblioteca digital donde podrás encontar una amplia variedad de libros, comentarlos con el resto de usuarios, apuntar eventos...
-                  </p>
-               </div>
-               <div class="col m4 xl4 l4 offset-l1 s12">
-                  <h5 class="white-text">Ubicación</h5>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
-                  <p id="direccion"><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
-               </div>
-               <div class="col l2 offset-l1 s12">
-                  <h5 class="white-text">Contactanos</h5>
-                  <ul>
-                     <li><a class="grey-text text-lighten-3" href="https://twitter.com/ElclubdelaLect1">
-                        <i class="fab fa-twitter"></i>
-                        Twitter</a>
-                     </li>
-                     <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/readclubull/">
-                        <i class="fab fa-instagram"></i>
-                        Instagram</a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-         <div class="footer-copyright">
-            <div class="container">
-               © 2019 Copyright Text
-            </div>
-         </div>
-      </footer>
+      <div id="footer"></div>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script type='text/javascript' src="javascript/func.js"></script>
