--- a/web/public/registro.html
+++ b/web/public/registro.html
@@ -26,6 +26,18 @@
       };
       firebase.initializeApp(config);
       </script>
+
+      <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous">
+      </script>
+      <script>
+        $(function(){
+          $("#footer").load("footer.html");
+      });
+      </script>
+      
    </head>
    <body>
       <nav>
@@ -102,44 +114,8 @@
       <p id="registro-input"> </p>
       </div>
 
-      <footer class="page-footer">
-         <div class="container">
-            <div class="center row">
-               <div class="col l4 s12">
-                  <h5 class="white-text">Quienes somos</h5>
-                  <p class="grey-text text-lighten-4">
-                     Somos una biblioteca digital donde podrás encontar una amplia variedad de libros, comentarlos con el resto de usuarios, apuntar eventos...
-                  </p>
-               </div>
-               <div class="col l4 offset-l1 s12">
-                  <h5 class="white-text">Ubicación</h5>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
-                  <p><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
-               </div>
-               <div class="col l2 offset-l1 s12">
-                  <h5 class="white-text">Contactanos</h5>
-                  <ul>
-                     <li><a class="grey-text text-lighten-3" href="#!">
-                        <i class="fab fa-twitter"></i>
-                        Twitter</a>
-                     </li>
-                     <li><a class="grey-text text-lighten-3" href="#!">
-                        <i class="fab fa-instagram"></i>
-                        Instagram</a>
-                     </li>
-                     <li><a class="grey-text text-lighten-3" href="#!">
-                        <i class="fab fa-facebook"></i>Facebook</a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-         <div class="footer-copyright">
-            <div class="container">
-               © 2019 Copyright Text
-            </div>
-         </div>
-      </footer>
+      <div id="footer"></div>
+
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="func.js"></script>
